# SkyRL

./: pyproject.toml
.github/workflows/: gpu_e2e_ci.yaml  gpu_e2e_ci_fully_async.yaml
ci/: gpu_ci_run_skyrl_train.sh  gpu_ci_run_skyrl_train_megatron.sh  gpu_e2e_test_run.sh  gpu_e2e_test_run_fully_async.sh  gpu_e2e_test_run_megatron.sh
docs/: api-pages.yaml
examples/tinker/ppo/: README.md  modal_run.py  ppo_client.py  run_tinker_server.sh
examples/train/async/: async_trainer.py
examples/train/flash_rl/: main_dapo_flashrl.py
examples/train/geometry3k/: README.md  env.py  geometry3k_entrypoint.py  geometry_3k_dataset.py  math_utils.py  run_geometry3k.sh  run_geometry3k_lora.sh
examples/train/gsm8k/: run_gsm8k_pd.sh
examples/train/megatron/: run_megatron_qwen3.5.sh
examples/train/models/: run_qwen3.5_0.8b.sh
examples/train/nemotron_3/: README.md  run_nemotron_3_nano_4b_gsm8k.sh
examples/train/search/: run_search.sh
examples/train/sft/: README.md  run_sft_dummy_fsdp.sh  run_sft_dummy_megatron.sh  run_sft_fsdp.sh  run_sft_lora.sh  run_sft_megatron.sh
examples/train/tis_correction/: main_tis_dapo.py
examples/train/visgym/: README.md  dataset.py  entrypoint.py  env_instruct.py  env_sft.py  run_visgym_from_instruct.sh  utils.py  (+1 more)
skyrl/: env_vars.py
skyrl-gym/: pyproject.toml
skyrl-gym/skyrl_gym/envs/: __init__.py  registration.py
skyrl/backends/: backend.py  jax.py  skyrl_train_backend.py
skyrl/benchmarks/: load_test_concurrency.py
skyrl/tinker/: api.py  engine.py  types.py
skyrl/train/: evaluate.py  fully_async_trainer.py  main_sft.py  sft_trainer.py  trainer.py
tests/backends/: test_jax_backend.py
tests/tinker/: test_api_validation.py  test_engine.py
tests/train/: test_config.py  test_generator_postprocess.py  test_prompt_mini_batch.py  test_sft_config.py  test_sft_tokenization.py  test_trainer.py
(+86 files in other folders)
